--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<html>
-           <head>
-                        <title>
-                        </title>
-          </head>
-          <body>
-                  Hello World
-          </body>
-<html>
+<!DOCTYPE html>
+<html lang="zh-CN"> 
+           <head> 
+                      <meta charset="utf-8">
+                      <title>我的个人网站</title>
+           </head> 
+           <body> 
+                      <h1>Hello Adalab</h1> <p>This is the first page I made at Adalab.</p > 
+           </body> 
+</html>
