--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
                       <title>我的个人网站</title>
            </head> 
            <body> 
-                      <h1>Hello Adalab</h1> <p>This is the first page I made at Adalab.</p > 
+                      <h1>Hello Adalab</h1> 
+                      <p>This is the first page I made at Adalab.
+                      </p > 
+                      <p>这是为
+                                 <a href="http://www.adable.cn/">
+                                 Adable
+                                 </a>
+                                 挑战赛制作的网站。</p>
            </body> 
 </html>
