--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                       <p>This is the first page I made at Adalab.
                       </p > 
                       <p>这是为
-                                 <a href="http://www.adable.cn/">
+                                 <a href="http://www.adalab.cn/">
                                  Adable
                                  </a>
                                  挑战赛制作的网站。</p>
