--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
                       <p>This is the first page I made at Adalab.
                       </p > 
                       <p>这是为
-                                 <a href="http://www.adalab.cn/">
-                                 Adable
+                                 <a href="https://www.adalab.cn">
+                                 Adalab
                                  </a>
                                  挑战赛制作的网站。</p>
            </body> 
