--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
                       <h1>Hello Adalab</h1> 
                       <p>This is the first page I made at Adalab.
                       </p > 
-                      <p>这是为
+                      <p>"这是为
                                  <a href="https://www.adalab.cn">
                                  Adalab
                                  </a>
-                                 挑战赛制作的网站。</p>
+                                 挑战赛制作的网站。"
+                      </p>
            </body> 
 </html>
