--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
                       <title>我的个人网站</title>
            </head> 
            <body> 
-                      <h1>Hello Adalab</h1> 
-                      <p>This is the first page I made at Adalab.
+                      <h1>
+                                 Hello Adalab
+                      </h1> 
+                      <p>
+                                 This is the first page I made at Adalab.
                       </p > 
                       <p>"这是为
-                                 <a href="https://www.adalab.cn">
+                                 <a href="https://www.adalab.cn/">
                                  Adalab
                                  </a>
                                  挑战赛制作的网站。"
