--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
                       <p>
                                  This is the first page I made at Adalab.
                       </p > 
-                      <p>"这是为
+                      <p>这是为
                                  <a href="https://www.adalab.cn/">
                                  Adalab
                                  </a>
-                                 挑战赛制作的网站。"
+                                 挑战赛制作的网站。
                       </p>
            </body> 
 </html>
