--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
                       <p>
                                  This is the first page I made at Adalab.
                       </p > 
-                      <p>这是为
+                      <p>我正在学习
+                                 <strong>
+                                            HTML
+                                 </strong>
+                      </p>
+                      <p>
+                                 我正在学习
+                                 <a href="https://html.spec.whatwg.org/multipage/">
+                                            HTML
+                                 </a>
+                      <p>
+                                 这是为
                                  <a href="https://www.adalab.cn/">
                                  Adalab
                                  </a>
