--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
                       <p>
                                  This is the first page I made at Adalab.
                       </p > 
-                      <p>我正在学习
+                      <p>
+                                 我正在学习
                                  <strong>
                                             HTML
                                  </strong>
@@ -20,7 +21,8 @@
                                  我正在学习
                                  <a hrel="https://html.spec.whatwg.org/multipage/">
                                                       HTML
-                                 <a>
+                                 </a>
+                      </p>
                                         
                       <p>
                                  这是为
