--- a/index.html
+++ b/index.html
@@ -12,24 +12,14 @@
                                  This is the first page I made at Adalab.
                       </p > 
                       <p>
-                                 我正在学习
-                                 <strong>
-                                            HTML
-                                 </strong>
+                                 我正在学习<strong>HTML</strong>
                       </p>
                       <p>
-                                 我正在学习
-                                 <a hrel="https://html.spec.whatwg.org/multipage/">
-                                                      HTML
-                                 </a>
+                                 我正在学习<a hrel="https://html.spec.whatwg.org/multipage/">HTML</a>
                       </p>
                                         
                       <p>
-                                 这是为
-                                 <a href="https://www.adalab.cn/">
-                                 Adalab
-                                 </a>
-                                 挑战赛制作的网站。
+                                 这是为<a href="https://www.adalab.cn/">Adalab</a>挑战赛制作的网站。
                       </p>
            </body> 
 </html>
