--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
                       <p>
                                  这是为<a href="https://www.adalab.cn/">Adalab</a>挑战赛制作的网站。
                       </p>
+                      <img src="http://resources.whatwg.org/logo-compat.png">
            </body> 
 </html>
