--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                       </p>
                                         
                       <p>
-                                 这是为<a href="https://www.adalab.cn/">Adalab</a>挑战赛制作的网站。
+                                 这是为<a href="https://www.adalab.cn/"><img src="http://www.adable.cn/images/adable.png"></a>挑战赛制作的网站。
                       </p>
                       <img src="http://resources.whatwg.org/logo-compat.png">
            </body> 
