--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
                       <p>
                                  另外showmaker选手也不错
                       </p>
-                      <a href="https://lpl.qq.com/"><img src="https://image.so.com/i?q=lpl%E5%9B%BE%E7%89%87&listsrc=sobox&listsign=52537916e338dbe8ecafbd0bff0bd0f1&src=360pic_strong"></a>
+                      <a href="https://lpl.qq.com/"><img src="https://www.adalab.cn/images/adalab.png"></a>
            </body> 
 </html>
