--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
                       <p>
                                  另外showmaker选手也不错
                       </p>
-                      <a href="https://lpl.qq.com/"><img src="https://www.adalab.cn/images/adalab.png"></a>
+                      <a href="https://lpl.qq.com/"><img src="https://uploadfile.bizhizu.cn/2015/0820/20150820020659373.jpg.source.jpg"></a>
            </body> 
 </html>
