--- a/bilibili.html
+++ b/bilibili.html
@@ -2,25 +2,9 @@
 <html lang="zh-CN"> 
            <head> 
                       <meta charset="utf-8">
-                      <title>我的个人网站</title>
+                      <title>bilibili</title>
            </head> 
            <body> 
-                      <h1>lol</h1> 
-                      <h2>lck</h2>
-                      <h3>lpl</h3>
-                      <p>
-                                 我很喜欢nugrui选手
-                      </p > 
-                      <p>
-                               同样我也很喜欢theshy选手
-                      </p>
-                      <p>
-                                 我还喜欢zeus选手
-                      </p>
-                                        
-                      <p>
-                                 另外showmaker选手也不错
-                      </p>
-                      <a href="https://lpl.qq.com/"><img src="https://uploadfile.bizhizu.cn/2015/0820/20150820020659373.jpg.source.jpg"></a>
+                      <p><a href="https://xiaoliuliumei.github.io.adalab.cn/">回到index</a></p>
            </body> 
 </html>
