--- a/bilibili.html
+++ b/bilibili.html
@@ -5,7 +5,22 @@
                       <title>bilibili</title>
            </head> 
            <body> 
-                      <p><a href="https://xiaoliuliumei.github.io.adalab.cn/">回到index</a></p>
+                      <header>
+                      <img src="https://uploadfile.bizhizu.cn/2015/0827/20150827103451457.jpg"></header>
+                      <main>
+                                 <aside>
+                                            <ul>
+  <li><a href="https://xiaoliuliumei.github.io/bilibili.html">我的哔哩哔哩网页</a></li>
+  <li><p><a href="https://xiaoliuliumei.github.io.adalab.cn/">回到index</a></li>
+  <li>无</li>
+</ul></aside>
+                                 <article><p><a href="https://xiaoliuliumei.github.io.adalab.cn/">回到index</a></p>
                       <iframe src="//player.bilibili.com/player.html?aid=461346062&bvid=BV1U5411T7rD&cid=357808881&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
-           </body> 
+   </article>
+                      </main>
+                      <footer>
+                      by <a href="https://www.zhihu.com/people/ke-xue-jia-47" target="_blank">CGTN</a> for <a href="https://www.adalab.cn" target="_blank">Adalab</a></footer>
+                      
+           
+                              </body> 
 </html>
