--- a/bilibili.html
+++ b/bilibili.html
@@ -11,7 +11,7 @@
                                  <aside>
                                             <ul>
   <li><a href="https://xiaoliuliumei.github.io/bilibili.html">我的哔哩哔哩网页</a></li>
-  <li><p><a href="https://xiaoliuliumei.github.io.adalab.cn/">回到index</a></li>
+  <li><a href="https://xiaoliuliumei.github.io.adalab.cn/">回到index</a></li>
   <li>无</li>
 </ul></aside>
                                  <article><p><a href="https://xiaoliuliumei.github.io.adalab.cn/">回到index</a></p>
