--- a/bilibili.html
+++ b/bilibili.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN"> 
-           <head> 
+           <head>
+                      <script src="thumbnail.js"></script>
                       <link href="https://www.adalab.cn/admission.css" rel="stylesheet">
 <link href="style.css" rel="stylesheet">
                       <meta charset="utf-8">
