--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                                  <aside>
                                             <ul>
   <li><a href="https://xiaoliuliumei.github.io/bilibili.html">我的哔哩哔哩网页</a></li>
-  <li>无</li>
-  <li>无</li>
+  <li><a href="https://www.douyu.com/">斗鱼直播</a></li>
+  <li><a href="https://www.huya.com/">虎牙直播</a></li>
 </ul></aside>
                                  <article><h1>lol</h1> 
                       <h2>lck</h2>
