--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                       <main>
                                  <aside>
                                             <ul>
-  <li><a href="https://xiaoliuliumei.github.io/bilibili.html">我的哔哩哔哩网页</a></li>
+  <li><a href="https://xiaoliuliumei.github.io/bilibili.html">我的哔哩哔哩</a></li>
   <li><a href="https://www.douyu.com/">斗鱼直播</a></li>
   <li><a href="https://www.huya.com/">虎牙直播</a></li>
 </ul></aside>
