--- a/index.html
+++ b/index.html
@@ -13,28 +13,22 @@
                       <main>
                                  <aside>
                                             <ul>
-  <li><a href="https://xiaoliuliumei.github.io/bilibili.html">我的哔哩哔哩</a></li>
-  <li><a href="https://www.douyu.com/">斗鱼直播</a></li>
-  <li><a href="https://www.huya.com/">虎牙直播</a></li>
-</ul></aside>
-                                 <article><h1>lol</h1> 
-                      <h2>lck</h2>
-                      <h3>lpl</h3>
-                      <p>
-                                 我很喜欢nugrui选手
-                      </p > 
-                      <p>
-                               同样我也很喜欢theshy选手
-                      </p>
-                      <p>
-                                 我还喜欢zeus选手
-                      </p>
-                                        
-                      <p>
-                                 另外showmaker选手也不错
-                      </p>
-                      <a href="https://lpl.qq.com/"><img src="https://uploadfile.bizhizu.cn/2015/0820/20150820020659373.jpg.source.jpg"></a>
-                                 <img src="https://tse1-mm.cn.bing.net/th/id/R-C.d67b5645f206dfd3dba551a7143d6f38?rik=LaFwax795M1GmA&riu=http%3a%2f%2fimage.qianye88.com%2fpic%2f83068195cfa69bcb2535b7549d7f7997&ehk=2g30EIdaRxb8wd4zHktEurqXU28S9bUjfBy1TDWRs%2bg%3d&risl=&pid=ImgRaw&r=0" class="small" id="smart-image"></article>
+                                                 <li><a href="https://xiaoliuliumei.github.io/bilibili.html">我的哔哩哔哩</a></li>
+                                                 <li><a href="https://www.douyu.com/">斗鱼直播</a></li>
+                                                 <li><a href="https://www.huya.com/">虎牙直播</a></li>
+                                            </ul>
+                                 </aside>
+                                 <article>
+                                            <h1>lol</h1> 
+                                            <h2>lck</h2>
+                                            <h3>lpl</h3>
+                                            <p>我很喜欢nugrui选手</p > 
+                                            <p>同样我也很喜欢theshy选手</p>
+                                            <p>我还喜欢zeus选手</p>
+                                            <p>另外showmaker选手也不错</p>
+                                            <a href="https://lpl.qq.com/"><img src="https://uploadfile.bizhizu.cn/2015/0820/20150820020659373.jpg.source.jpg"></a>
+                                            <img src="https://tse1-mm.cn.bing.net/th/id/R-C.d67b5645f206dfd3dba551a7143d6f38?rik=LaFwax795M1GmA&riu=http%3a%2f%2fimage.qianye88.com%2fpic%2f83068195cfa69bcb2535b7549d7f7997&ehk=2g30EIdaRxb8wd4zHktEurqXU28S9bUjfBy1TDWRs%2bg%3d&risl=&pid=ImgRaw&r=0" class="small" id="smart-image">
+                                 </article>
                       </main>
                       <footer>
                       by <a href="https://www.zhihu.com/people/ke-xue-jia-47" target="_blank">CGTN</a> for <a href="https://www.adalab.cn" target="_blank">Adalab</a></footer>
