--- a/index.html
+++ b/index.html
@@ -20,14 +20,33 @@
                                             </ul>
                                  </aside>
                                  <article>
-                                            <h1>lol</h1> 
-                                            <h2>lck</h2>
-                                            <h3>lpl</h3>
-                                            <p>我很喜欢nugrui选手</p > 
-                                            <p>同样我也很喜欢theshy选手</p>
-                                            <p>我还喜欢zeus选手</p>
-                                            <p>另外showmaker选手也不错</p>
-                                            <a href="https://lpl.qq.com/"><img src="https://uploadfile.bizhizu.cn/2015/0820/20150820020659373.jpg.source.jpg"></a>
+                                            <h1>lol游戏介绍</h1> 
+                                            <p>《英雄联盟》(League of Legends，简称LOL)是由美国拳头游戏(Riot Games)开发、中国内地由腾讯游戏代理运营的英雄对战MOBA竞技网游。游戏里拥有数百个个性英雄，并拥有排位系统、符文系统等特色系统。
+
+《英雄联盟》致力于推动全球电子竞技的发展，除了联动各赛区发展职业联赛、打造电竞体系之外，每年还会举办"英雄联盟季中冠军赛""英雄联盟全球总决赛""英雄联盟全明星赛"三大世界级赛事，形成了自己独有的电子竞技文化 。
+
+2018年5月14日，《英雄联盟》加入"亚洲运动会"，成为表演项目之一 。2021年11月5日，《英雄联盟》入选为第19届"亚洲运动会"电竞比赛项目，这是电竞首次成为亚运会的正式竞赛项目，向全世界展现电竞运动的魅力，项目所获得的奖牌将计入国家奖牌榜 。
+
+2019年9月17日，拳头游戏值《英雄联盟》十周年之际发布了其全新的LOGO，并公布每一天全世界都有超过八百万玩家同时在线，这意味着英雄联盟依然是全球玩家数最大的电脑游戏 。</p >
+                                            <h2>LPL赛区</h2>
+                                            <p>英雄联盟职业联赛(League of Legends Pro League; LPL)，是中国大陆最高级别的英雄联盟职业比赛，同时也是中国大陆赛区通往每年英雄联盟季中冠军赛和英雄联盟全球总决赛的唯一渠道。
+
+每年的LPL由春季赛和夏季赛组成，每季分为常规赛与季后赛。常规赛积分排名前十的战队将晋级季后赛，为赛季总冠军以及赛事奖金继续展开争夺。
+
+春季赛冠军会代表LPL赛区参加每年5月的英雄联盟季中冠军赛。夏季赛冠军将作为LPL赛区的一号种子直接保送全球总决赛，全年积分最高的队伍将作为二号种子晋级全球总决赛，顺位之下的四支积分最高的队伍进行预选赛，获胜的队伍将作为三号种子拿下最后的一张全球总决赛的门票。
+
+2018年11月3日，IG在2018英雄联盟全球总决赛中夺得冠军，这是历史上LPL的战队取得的第一个S赛冠军!
+
+2019年11月10日，FPX在2019英雄联盟全球总决赛中夺得冠军，这是历史上LPL的战队取得的第二个S赛冠军!
+
+2020年5月31日，两支LPL战队FPX和TES成功会师2020英雄联盟季中杯决赛，这是历史上LPL的战队首次会师国际赛事总决赛舞台!
+
+2021年11月7日，EDG在2021英雄联盟全球总决赛中夺得冠军，这是历史上LPL的战队取得的第三个S赛冠军!
+
+在夺得2021英雄联盟全球总决赛冠军后，EDG队长兼辅助田野(id:Meiko)成为LPL历史上首位赛事大满贯选手(包揽LPL春夏联赛冠军、MSI季中赛冠军、洲际赛冠军、亚运会冠军、全明星赛冠军和全球总决赛冠军)!</p>
+                                            <h3>我喜欢的选手</h3>
+                                            <p>viper nugrui...</p>
+                                            <a href="https://www.thaihot.com.cn/lol/lpl/4094.html"><img src="https://image.so.com/view?q=viper%E9%80%89%E6%89%8B%E5%9B%BE%E7%89%87&listsrc=sobox&listsign=5833ae2ab6680d064ce2871b3c0acc1b&src=360pic_strong&correct=viper%E9%80%89%E6%89%8B%E5%9B%BE%E7%89%87&ancestor=list&cmsid=012d664601cd1c84d4815f1c20392e28&cmras=0&cn=0&gn=0&kn=0&crn=0&bxn=0&fsn=60&cuben=0&pornn=0&manun=0&adstar=0&clw=254#id=4c1830e840d4d9d33052350ebc707ed4&currsn=0&ps=51&pc=51"></a>
                                             <img src="https://tse1-mm.cn.bing.net/th/id/R-C.d67b5645f206dfd3dba551a7143d6f38?rik=LaFwax795M1GmA&riu=http%3a%2f%2fimage.qianye88.com%2fpic%2f83068195cfa69bcb2535b7549d7f7997&ehk=2g30EIdaRxb8wd4zHktEurqXU28S9bUjfBy1TDWRs%2bg%3d&risl=&pid=ImgRaw&r=0" class="small" id="smart-image">
                                  </article>
                       </main>
