--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
                                             <a href="https://www.thaihot.com.cn/lol/lpl/4094.html"><img src="https://image.so.com/view?q=viper%E9%80%89%E6%89%8B%E5%9B%BE%E7%89%87&listsrc=sobox&listsign=5833ae2ab6680d064ce2871b3c0acc1b&src=360pic_strong&correct=viper%E9%80%89%E6%89%8B%E5%9B%BE%E7%89%87&ancestor=list&cmsid=012d664601cd1c84d4815f1c20392e28&cmras=0&cn=0&gn=0&kn=0&crn=0&bxn=0&fsn=60&cuben=0&pornn=0&manun=0&adstar=0&clw=254#id=4c1830e840d4d9d33052350ebc707ed4&currsn=0&ps=51&pc=51" alt="抱歉！找不到图片路径"></a>
                                             <h4>相关图片 注：点击此图可查看大图</h4> 
                                             <img src="https://tse1-mm.cn.bing.net/th/id/R-C.d67b5645f206dfd3dba551a7143d6f38?rik=LaFwax795M1GmA&riu=http%3a%2f%2fimage.qianye88.com%2fpic%2f83068195cfa69bcb2535b7549d7f7997&ehk=2g30EIdaRxb8wd4zHktEurqXU28S9bUjfBy1TDWRs%2bg%3d&risl=&pid=ImgRaw&r=0" class="small" id="smart-image">
+                                            <div id="waline"></div>
+          <script>
+            Waline({
+              el: '#waline',
+              serverURL: 'https://blog-waline-opal.vercel.app',
+            });
+          </script>
                                  </article>
                       </main>
                       <footer>
