--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
                       <link href="https://www.adalab.cn/admission.css" rel="stylesheet">
 <link href="style.css" rel="stylesheet">
                       <script src="thumbnail.js"></script>
+                      <script src="//cdn.jsdelivr.net/npm/@waline/client"></script>
            </head> 
            <body> 
                       <header>
