--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 在夺得2021英雄联盟全球总决赛冠军后，EDG队长兼辅助田野(id:Meiko)成为LPL历史上首位赛事大满贯选手(包揽LPL春夏联赛冠军、MSI季中赛冠军、洲际赛冠军、亚运会冠军、全明星赛冠军和全球总决赛冠军)!</p>
                                             <h3>我喜欢的选手</h3>
                                             <p>viper nugrui...</p>
-                                            <a href="https://www.thaihot.com.cn/lol/lpl/4094.html"><img src="https://bkimg.cdn.bcebos.com/pic/5bafa40f4bfbfbedab6417e1bea1e036afc37931b156?x-bce-process=image/watermark,image_d2F0ZXIvYmFpa2UxMTY=,g_7,xp_5,yp_5/format,f_auto" alt="抱歉！找不到图片路径"></a>
+                                            <a href="https://baike.baidu.com/item/%E7%AE%80%E8%87%AA%E8%B1%AA/14190783?fromtitle=Uzi&fromid=20207029"><img src="https://bkimg.cdn.bcebos.com/pic/5bafa40f4bfbfbedab6417e1bea1e036afc37931b156?x-bce-process=image/watermark,image_d2F0ZXIvYmFpa2UxMTY=,g_7,xp_5,yp_5/format,f_auto" alt="抱歉！找不到图片路径"></a>
                                             <h4>相关图片 注：点击此图可查看大图</h4> 
                                             <img src="https://tse1-mm.cn.bing.net/th/id/R-C.d67b5645f206dfd3dba551a7143d6f38?rik=LaFwax795M1GmA&riu=http%3a%2f%2fimage.qianye88.com%2fpic%2f83068195cfa69bcb2535b7549d7f7997&ehk=2g30EIdaRxb8wd4zHktEurqXU28S9bUjfBy1TDWRs%2bg%3d&risl=&pid=ImgRaw&r=0" class="small" id="smart-image">
                                             <div id="waline"></div>
